Updates redirects for domain verification
Updates the Vercel configuration to correctly redirect
traffic for the jobtize.com domain.

This ensures proper domain verification and routing of requests.

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,14 @@
 {
   "redirects": [
     {
-      "source": "/(.*)",
-      "has": [{ "type": "host", "value": "jobtize.com" }],
-      "destination": "https://www.jobtize.com/:1",
+      "source": "/:path*",
+      "destination": "https://www.jobtize.com/:path*",
+      "has": [
+        {
+          "type": "host",
+          "value": "jobtize.com"
+        }
+      ],
       "permanent": true
     }
   ]
